src/ida/fmod/fida_mod.f90


function FIDASetMaxNonlinIters(ida_mem, maxcor) &
bind(C, name="IDASetMaxNonlinIters") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT), value :: maxcor
integer(C_INT) :: fresult
end function

function FIDASetMaxConvFails(ida_mem, maxncf) &
bind(C, name="IDASetMaxConvFails") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT), value :: maxncf
integer(C_INT) :: fresult
end function

function FIDASetSuppressAlg(ida_mem, suppressalg) &
bind(C, name="IDASetSuppressAlg") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
logical(C_BOOL), value :: suppressalg
integer(C_INT) :: fresult
end function

function FIDASetId(ida_mem, id) &
bind(C, name="IDASetId") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_PTR), value :: id
integer(C_INT) :: fresult
end function

function FIDASetConstraints(ida_mem, constraints) &
bind(C, name="IDASetConstraints") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_PTR), value :: constraints
integer(C_INT) :: fresult
end function

function FIDASetNonlinearSolver(ida_mem, nls) &
bind(C, name="IDASetNonlinearSolver") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_PTR), value :: nls
integer(C_INT) :: fresult
end function

function FIDARootInit(ida_mem, nrtfn, g) &
bind(C, name="IDARootInit") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT), value :: nrtfn
type(C_FUNPTR), value :: g
integer(C_INT) :: fresult
end function

function FIDASetRootDirection(ida_mem, rootdir) &
bind(C, name="IDASetRootDirection") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT) :: rootdir
integer(C_INT) :: fresult
end function

function FIDASetNoInactiveRootWarn(ida_mem) &
bind(C, name="IDASetNoInactiveRootWarn") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT) :: fresult
end function

function FIDASolve(ida_mem, tout, tret, yret, ypret, itask) &
bind(C, name="IDASolve") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE), value :: tout
real(C_DOUBLE) :: tret
type(C_PTR), value :: yret
type(C_PTR), value :: ypret
integer(C_INT), value :: itask
integer(C_INT) :: fresult
end function

function FIDAGetDky(ida_mem, t, k, dky) &
bind(C, name="IDAGetDky") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE), value :: t
integer(C_INT), value :: k
type(C_PTR), value :: dky
integer(C_INT) :: fresult
end function

function FIDAGetWorkSpace(ida_mem, lenrw, leniw) &
bind(C, name="IDAGetWorkSpace") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: lenrw
integer(C_LONG) :: leniw
integer(C_INT) :: fresult
end function

function FIDAGetNumSteps(ida_mem, nsteps) &
bind(C, name="IDAGetNumSteps") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: nsteps
integer(C_INT) :: fresult
end function

function FIDAGetNumResEvals(ida_mem, nrevals) &
bind(C, name="IDAGetNumResEvals") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: nrevals
integer(C_INT) :: fresult
end function

function FIDAGetNumLinSolvSetups(ida_mem, nlinsetups) &
bind(C, name="IDAGetNumLinSolvSetups") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: nlinsetups
integer(C_INT) :: fresult
end function

function FIDAGetNumErrTestFails(ida_mem, netfails) &
bind(C, name="IDAGetNumErrTestFails") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: netfails
integer(C_INT) :: fresult
end function

function FIDAGetNumBacktrackOps(ida_mem, nbacktr) &
bind(C, name="IDAGetNumBacktrackOps") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: nbacktr
integer(C_INT) :: fresult
end function

function FIDAGetConsistentIC(ida_mem, yy0_mod, yp0_mod) &
bind(C, name="IDAGetConsistentIC") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_PTR), value :: yy0_mod
type(C_PTR), value :: yp0_mod
integer(C_INT) :: fresult
end function

function FIDAGetLastOrder(ida_mem, klast) &
bind(C, name="IDAGetLastOrder") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT) :: klast
integer(C_INT) :: fresult
end function

function FIDAGetCurrentOrder(ida_mem, kcur) &
bind(C, name="IDAGetCurrentOrder") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT) :: kcur
integer(C_INT) :: fresult
end function

function FIDAGetActualInitStep(ida_mem, hinused) &
bind(C, name="IDAGetActualInitStep") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE) :: hinused
integer(C_INT) :: fresult
end function

function FIDAGetLastStep(ida_mem, hlast) &
bind(C, name="IDAGetLastStep") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE) :: hlast
integer(C_INT) :: fresult
end function

function FIDAGetCurrentStep(ida_mem, hcur) &
bind(C, name="IDAGetCurrentStep") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE) :: hcur
integer(C_INT) :: fresult
end function

function FIDAGetCurrentTime(ida_mem, tcur) &
bind(C, name="IDAGetCurrentTime") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE) :: tcur
integer(C_INT) :: fresult
end function

function FIDAGetTolScaleFactor(ida_mem, tolsfact) &
bind(C, name="IDAGetTolScaleFactor") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE) :: tolsfact
integer(C_INT) :: fresult
end function

function FIDAGetErrWeights(ida_mem, eweight) &
bind(C, name="IDAGetErrWeights") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_PTR), value :: eweight
integer(C_INT) :: fresult
end function

function FIDAGetEstLocalErrors(ida_mem, ele) &
bind(C, name="IDAGetEstLocalErrors") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_PTR), value :: ele
integer(C_INT) :: fresult
end function

function FIDAGetNumGEvals(ida_mem, ngevals) &
bind(C, name="IDAGetNumGEvals") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: ngevals
integer(C_INT) :: fresult
end function

function FIDAGetRootInfo(ida_mem, rootsfound) &
bind(C, name="IDAGetRootInfo") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT) :: rootsfound
integer(C_INT) :: fresult
end function

function FIDAGetIntegratorStats(ida_mem, nsteps, nrevals, nlinsetups, netfails, qlast, qcur, hinused, hlast, hcur, tcur) &
bind(C, name="IDAGetIntegratorStats") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: nsteps
integer(C_LONG) :: nrevals
integer(C_LONG) :: nlinsetups
integer(C_LONG) :: netfails
integer(C_INT) :: qlast
integer(C_INT) :: qcur
real(C_DOUBLE) :: hinused
real(C_DOUBLE) :: hlast
real(C_DOUBLE) :: hcur
real(C_DOUBLE) :: tcur
integer(C_INT) :: fresult
end function

function FIDAGetNumNonlinSolvIters(ida_mem, nniters) &
bind(C, name="IDAGetNumNonlinSolvIters") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: nniters
integer(C_INT) :: fresult
end function

function FIDAGetNumNonlinSolvConvFails(ida_mem, nncfails) &
bind(C, name="IDAGetNumNonlinSolvConvFails") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: nncfails
integer(C_INT) :: fresult
end function

function FIDAGetNonlinSolvStats(ida_mem, nniters, nncfails) &
bind(C, name="IDAGetNonlinSolvStats") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: nniters
integer(C_LONG) :: nncfails
integer(C_INT) :: fresult
end function

function FIDAGetReturnFlagName(flag) &
bind(C, name="IDAGetReturnFlagName") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
integer(C_LONG), value :: flag
type(C_PTR) :: fresult
end function

subroutine FIDAFree(ida_mem) &
bind(C, name="IDAFree")
use, intrinsic :: ISO_C_BINDING
type(C_PTR) :: ida_mem
end subroutine

function FIDABBDPrecInit(ida_mem, nlocal, mudq, mldq, mukeep, mlkeep, dq_rel_yy, gres, gcomm) &
bind(C, name="IDABBDPrecInit") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT64_T), value :: nlocal
integer(C_INT64_T), value :: mudq
integer(C_INT64_T), value :: mldq
integer(C_INT64_T), value :: mukeep
integer(C_INT64_T), value :: mlkeep
real(C_DOUBLE), value :: dq_rel_yy
type(C_FUNPTR), value :: gres
type(C_FUNPTR), value :: gcomm
integer(C_INT) :: fresult
end function

function FIDABBDPrecReInit(ida_mem, mudq, mldq, dq_rel_yy) &
bind(C, name="IDABBDPrecReInit") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT64_T), value :: mudq
integer(C_INT64_T), value :: mldq
real(C_DOUBLE), value :: dq_rel_yy
integer(C_INT) :: fresult
end function

function FIDABBDPrecGetWorkSpace(ida_mem, lenrwbbdp, leniwbbdp) &
bind(C, name="IDABBDPrecGetWorkSpace") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: lenrwbbdp
integer(C_LONG) :: leniwbbdp
integer(C_INT) :: fresult
end function

function FIDABBDPrecGetNumGfnEvals(ida_mem, ngevalsbbdp) &
bind(C, name="IDABBDPrecGetNumGfnEvals") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: ngevalsbbdp
integer(C_INT) :: fresult
end function

function FIDASetLinearSolver(ida_mem, ls, a) &
bind(C, name="IDASetLinearSolver") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_PTR), value :: ls
type(C_PTR), value :: a
integer(C_INT) :: fresult
end function

function FIDASetJacFn(ida_mem, jac) &
bind(C, name="IDASetJacFn") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_FUNPTR), value :: jac
integer(C_INT) :: fresult
end function

function FIDASetPreconditioner(ida_mem, pset, psolve) &
bind(C, name="IDASetPreconditioner") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_FUNPTR), value :: pset
type(C_FUNPTR), value :: psolve
integer(C_INT) :: fresult
end function

function FIDASetJacTimes(ida_mem, jtsetup, jtimes) &
bind(C, name="IDASetJacTimes") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_FUNPTR), value :: jtsetup
type(C_FUNPTR), value :: jtimes
integer(C_INT) :: fresult
end function

function FIDASetEpsLin(ida_mem, eplifac) &
bind(C, name="IDASetEpsLin") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE), value :: eplifac
integer(C_INT) :: fresult
end function

function FIDASetIncrementFactor(ida_mem, dqincfac) &
bind(C, name="IDASetIncrementFactor") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE), value :: dqincfac
integer(C_INT) :: fresult
end function

function FIDAGetLinWorkSpace(ida_mem, lenrwls, leniwls) &
bind(C, name="IDAGetLinWorkSpace") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: lenrwls
integer(C_LONG) :: leniwls
integer(C_INT) :: fresult
end function

function FIDAGetNumJacEvals(ida_mem, njevals) &
bind(C, name="IDAGetNumJacEvals") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG) :: njevals
integer(C_INT) :: fresult
end function
